# learn-rust

./: .env  .gitignore  Cargo.toml  diesel.toml
db/: database.db
migrations/2025-01-02-021956_url/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
templates/site/: index.html.j2
