[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
dotenvy = "0.15"
bcrypt = "0.16.0"
rand = "0.8.5"
base64 = "0.22.1"
sha256 = "1.5.0"
[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["minijinja"]
